# Proyecto1_EDD

./: CMakeLists.txt
doc/: .$EDD1.drawio.bkp  .$EDD1.drawio.dtmp  EDD1.drawio
include/: CargarRegistro.h  Jugar.h  Tablero.h
include/estructuras/: ArbolEnemy.h  ArbolPista.h  ArbolTrampa.h  OrdenJugadores.h
include/objeto/: Enemigo.h  Jugador.h  Objeto.h  Pista.h  Pocima.h  Tesoro.h  Trampa.h  Util.h
lib/: Jugar.cpp  Tablero.cpp
lib/utils/: tinyfiledialogs.cpp
src/: CargarRegistro.h  main.cpp  programa
src/include/objeto/: Objeto.h
src/lib/objeto/: Jugador.cpp  Objeto.cpp
